plugins {
    id "java"
    id "org.springframework.boot" version "3.4.5"
    id "io.spring.dependency-management" version "1.1.6"
}

group = "com.cjw"
version = "0.0.1-SNAPSHOT"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

configurations.configureEach {
    exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    exclude group: 'ch.qos.logback', module: 'logback-classic'

    exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
}

ext {
    // Jwt Token
    jjwtVersion = '0.12.6'
    // 컬렉션
    apacheCollectionUtilsVersion = '4.4'
    // 문자열
    apacheLangUtilsVersion = '3.18.0'
    // 텍스트
    apacheTextUtilsVersion = '1.12.0'
    // 압축
    apacheCompressUtilsVersion = '1.27.1'
    // HikariCP
    hikariCPVersion = '6.2.1'
    // MyBatis
    mybatisVersion = '3.0.4'
    // OpenAPI
    openApiVersion = '2.7.0'
    // Elasticsearch Client
    elasticsearhClientVersion = '8.16.1'
    // Log4j2
    log4jdbcVersion = '1.16'
    // Spring Cloud Stream
    springCloudStreamVersion = '4.3.0'
    // Caffeine (Local Cache)
    caffeineVersion = '3.1.8'
    // Jasypt
    jasyptVersion = '3.0.5'
    // owasp-java-html-sanitizer
    owaspJavaHtmlSanitizerVersion = '20240325.1'
    // HttpClient
    httpClientVersion = '5.5'

    opentelemetryVersion = '1.38.0'
}

dependencies {
    implementation "org.springframework.boot:spring-boot-starter-batch"
    implementation "org.springframework.boot:spring-boot-starter-data-elasticsearch"
    implementation "org.springframework.boot:spring-boot-starter-data-redis"
    implementation "org.springframework.boot:spring-boot-starter-jdbc"
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation "org.springframework.boot:spring-boot-starter-validation"
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-cache"
    implementation "org.springframework.boot:spring-boot-starter-data-jdbc"
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testImplementation "org.springframework.security:spring-security-test"

    compileOnly "org.projectlombok:lombok"
    runtimeOnly "org.mariadb.jdbc:mariadb-java-client"
    annotationProcessor "org.projectlombok:lombok"
    testImplementation "org.springframework.batch:spring-batch-test"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"

    // MariaDB Driver
    implementation "org.mariadb.jdbc:mariadb-java-client"

    // MyBatis
    implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:${mybatisVersion}"

    // JWT 의존성
    implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"

    // 유틸 라이브러리
    implementation "org.apache.commons:commons-collections4:${apacheCollectionUtilsVersion}"
    implementation "org.apache.commons:commons-lang3:${apacheLangUtilsVersion}"
    implementation "org.apache.commons:commons-compress:${apacheCompressUtilsVersion}"
    implementation "org.apache.commons:commons-text:${apacheTextUtilsVersion}"

    // Open API
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${openApiVersion}"

    // jackson
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"

    // Elasticsearch Rest Client
    implementation "org.elasticsearch.client:elasticsearch-rest-client:${elasticsearhClientVersion}"
    implementation "io.opentelemetry:opentelemetry-api:${opentelemetryVersion}"

    // log4jdbc
    implementation "org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:${log4jdbcVersion}"
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'

    // Kafka
    implementation "org.springframework.cloud:spring-cloud-starter-stream-kafka:${springCloudStreamVersion}"
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Request Cache
    implementation "com.github.ben-manes.caffeine:caffeine:${caffeineVersion}"

    // Jasypt
    implementation "com.github.ulisesbocchio:jasypt-spring-boot-starter:${jasyptVersion}"

    // Owasp Java Html Sanitizer
    implementation "com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer:${owaspJavaHtmlSanitizerVersion}"

    // http-client5
    implementation "org.apache.httpcomponents.client5:httpclient5:${httpClientVersion}"
}